update shows page for summer 2022

--- a/_haml/pages/shows.haml
+++ b/_haml/pages/shows.haml
@@ -15,14 +15,39 @@ title: Faking Shows
       %img.shows__photo{src: 'images/live/livecen-sm.jpg', alt: 'Faking live.', data:{image:'images/live/livecen.jpg'}}
 
   .shows__listings
-    -# %h3.shows__listings-heading Upcomming Events
+    %h3.shows__listings-heading Recent & Upcomming Shows
 
-    -# .shows__event
-    -#   .shows__date Nov. 7
-    -#   .shows__venue Century Bar
-    -#   .shows__city Philadelphia, PA
-    -#   .shows__bands w/ Black Lung, Queen Elephantine, Mutant Flesh
-    -#   %a.shows__event-link{href: 'https://www.facebook.com/events/2393979930655350/'} Facebook event page
+    .shows__event
+      .shows__date April 28, 2022
+      .shows__venue Kung Fu Necktie
+      .shows__city Philadelphia, PA
+      .shows__bands w/ Stinking Lizaveta, Microwaves
+      %a.shows__event-link{href: 'https://www.facebook.com/events/951155909107390'} Facebook event page
+
+
+    .shows__event
+      .shows__date July 29, 2022
+      .shows__venue Ortlieb's
+      .shows__city Philadelphia, PA
+      .shows__bands w/ Sunburster, Wailin Storms, Tangled Up
+      %a.shows__event-link{href: 'https://www.facebook.com/events/809627310194219'} Facebook event page
+
+
+    .shows__event
+      .shows__date August 26, 2022
+      .shows__venue brillobox
+      .shows__city Pittsburgh, PA
+      .shows__bands w/ Brown Angel, T-Tops, AutoReplicant
+      %a.shows__event-link{href: 'https://www.facebook.com/brilloboxpgh/'} Facebook event page
+
+
+    .shows__event
+      .shows__date August 27, 2022
+      .shows__venue The Royal Oaks
+      .shows__city Youngstown, OH
+      .shows__bands w/ Brown Angel, Daikaiju, Rebreather, DAGGRS, etc.
+      %a.shows__event-link{href: 'https://www.facebook.com/events/524128022849811'} Facebook event page
+
 
   .shows__row
     %button.shows__image-button{ data:{gallery_image_button:''} }
